# 2.04.00 (43650) Aug 30, 2010
8/30/10 new production version with fixes for #2236, #2438, #2446
8/30/10 #2236, update data/faraday/bfield/README
8/30/10 #2236, check in MathCAD file for numerical model of bar magnet
# 2.03.08 (43454) Aug 24, 2010
8/24/10 #2236, calibrate ELECTRON_SPEED_SCALE in each module that has a pickup coil
8/24/10 #2236, restore "pickup electron motion scale" developer control
8/24/10 #2467, switch to phetcommon Vector2D, delete local implementation
8/3/10 #2236, set GeneratorModule.CALIBRATION_EMF=26000
# 2.03.07 (42549) Jul 21, 2010
7/21/10 dev version to demonstrate recalibration
7/21/10 #2236, change max length of light rays from 500 to 350 to match behavior of 2.03.00
7/21/10 #2236, perform initial recalibration
7/21/10 #2236, add PickupCoil.calibrateEmf to provide calibration assistance
7/21/10 #2236, delete individual calibration controls on lightbulb, voltmeter and electrons
7/21/10 #2236, add master calibration control, PickupCoil.calibrationEmf
> improved compass behavior for DC electromagnet
7/21/10 #2446, adjust compass behavior to match electromagnet current source (DC=kinematic, AC=incremental)
7/21/10 cleanup FaradayControlPanel, remove call to deprecated constructor, refine public interface
7/21/10 #2236, calibrate kinematic compass behavior
# 2.03.06 (42502) Jul 20, 2010
> new model for bar magnet, more physically accurate 
7/20/10 #2236, implement 3-grid approach for bar magnet B-field
7/20/10 #2236, increase the intensity of compass needles just outside ends of magnet to improve the B-field "look"
> improved collision detection for compass
7/19/10 #2438, use Shapes for collision detection, define compass bounds as a circle
7/19/10 #2236, increase range of view scaling parameters to [1...1000].
7/19/10 #2236, collapse class hierachy, pull up NumericalBarMagnet into BarMagnet
# 2.03.05 (42426) Jul 19, 2010
7/19/10 dev version to demonstrate scaling of B-field intensity in the view