@@ -1,3 +1,4 @@
+9/20/10 #2511, revert #2446 which made compass go crazy when near DC electromagnet
 # 2.04.00 (43650) Aug 30, 2010
 8/30/10 new production version with fixes for #2236, #2438, #2446
 8/30/10 #2236, update data/faraday/bfield/README
